--- a/src/Pages/Inscription/Inscription.css
+++ b/src/Pages/Inscription/Inscription.css
@@ -1,7 +1,8 @@
 /* src/pages/Inscription/Inscription.css */
 .inscription-container {
-    font-family: Arial, sans-serif;
+    font-family: 'Ubunto', sans-serif;
     background-color: #f9f9f9;
+    width: 1250px;
   }
   
   .header {
@@ -21,6 +22,7 @@
     font-size: 1.5em;
     font-weight: bold;
     color: black;
+    margin-top: 20px;
   }
   
   .logout {
@@ -29,7 +31,7 @@
     display: flex;
     align-items: center;
     cursor: pointer;
-    margin-left: 850px;
+    margin-left: 1000px;
   }
   
   .logout i {
@@ -186,6 +188,7 @@
     outline: none;
     flex-grow: 1;
     padding-left: 10px;
+    margin-left: 2px;
   }
   
   .submit-button {
